# surfer-h-cli

./: .env.example  .gitignore  LICENSE  README.md  agent_server.py  launch.sh  pyproject.toml  requirements.txt  requirements_server.txt  requirements_vllm.txt  run-on-holo1-local.sh  run-on-holo1-val-gpt41.sh  run-on-holo1.sh
frontend/: .gitignore  README.md  package.json
frontend/public/: logo.json
frontend/public/logos/h-lottie/: h-logo.json  h-logo.lottie
frontend/src/: middleware.ts
frontend/src/app/: favicon.js  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  template.tsx
frontend/src/app/[...slug]/: page.tsx
frontend/src/app/api/trajectories/: route.ts
frontend/src/app/api/trajectory-events/: route.ts
frontend/src/app/surfer-view/[task_id]/: page.tsx
frontend/src/components/Home/: create-trajectory-input-area.tsx  homepage.tsx  settings-sheet.tsx
frontend/src/components/SurferH/: event-stream.tsx  surfer-view.tsx
frontend/src/components/common/atoms/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  error-boundary.tsx  labeled-input.tsx  labeled-select.tsx  settings-section.tsx  sheet.tsx  switch.tsx
frontend/src/components/common/icons/: AddFile.tsx  AppleIcon.tsx  ArrowLeftIcon.tsx  ArrowRight.tsx  (+117 more)
frontend/src/hooks/: useTrajectories.ts
frontend/src/providers/: QueryProvider.tsx  SidebarProvider.tsx
src/surfer_h_cli/: simple_browser.py  surferh.py  utils.py
src/surfer_h_cli/holo1/: README.md
src/surfer_h_cli/skills/: localization.py  navigation_models.py  navigation_step.py  validation.py  validation_models.py
(+6 files in other folders)
